--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+/* @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css"; */
+@import "~@angular/material/prebuilt-themes/pink-bluegrey.css";
+/* @import "~@angular/material/prebuilt-themes/purple-green.css"; */
+
+/*https://stackoverflow.com/questions/44677960/how-to-use-material-design-icons-in-angular-4#47399531*/
+/*material-design-icons*/
+
+body{
+    margin: 0;
+}
